--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             </div>
 
             <!-- Título Principal -->
-            <h1>Como profissionais da estética estão economizando com uniformes sob medida — costurando em casa com moldes prontos</h1>
+            <h1>Como costureiras comuns estão lucrando com uniformes sob medida feitos em casa — costurando em casa com moldes prontos</h1>
 
             <!-- Subtítulo -->
             <p class="subtitle">
